# causal-rs

./: .gitignore  API_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_MNDIGITALAID.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  README.md  README.md.backup  README.md.bak2  README.md.bak3  RESTRUCTURE_PLAN.md  TODO.md  update_tests.sh
crates/seesaw/: Cargo.toml
crates/seesaw-insight/: Cargo.toml  README.md
crates/seesaw-insight/dashboard/: package-lock.json  package.json  vite.config.js
crates/seesaw-insight/dashboard/src/: App.css  App.jsx  index.css
crates/seesaw-insight/dashboard/src/components/: Canvas.jsx  Header.jsx  Sidebar.jsx  StreamEntry.jsx  TreeView.jsx
crates/seesaw-insight/dashboard/src/hooks/: useWebSocket.js
crates/seesaw-insight/src/: lib.rs  main.rs  stream.rs  tree.rs  web.rs  websocket.rs
crates/seesaw-insight/static/: index.html
crates/seesaw-insight/static/assets/: index-3CtULUer.js  index-9AMDzdon.js  index-BFAcCxRY.css  index-C7EwMxDZ.js  index-CqnGSssF.css  index-DRXlwvMb.css  index-KMVrHv8g.css  index-fyap3Tur.js
crates/seesaw-job-postgres/: Cargo.toml
crates/seesaw-kafka/: Cargo.toml  README.md
crates/seesaw-kafka/examples/: kafka_demo.rs
crates/seesaw-kafka/src/: backend.rs  config.rs  event_worker.rs  kafka_client.rs  lib.rs  partition_strategy.rs
crates/seesaw-kafka/tests/: integration_tests.rs
crates/seesaw-macros/: Cargo.toml
crates/seesaw-memory/: Cargo.toml
crates/seesaw-memory/src/: event_store.rs  lib.rs
crates/seesaw-outbox/: Cargo.toml
crates/seesaw-persistence/: Cargo.toml
crates/seesaw-postgres/: Cargo.toml
crates/seesaw-postgres/src/: event_store.rs  lib.rs  lib_checked.rs
crates/seesaw-postgres/tests/: integration_tests.rs
crates/seesaw-testing/: Cargo.toml
crates/seesaw-viz/: Cargo.toml  README.md
crates/seesaw-viz/src/: collector.rs  formatter.rs  lib.rs  renderer.rs  sampling.rs  types.rs  web.rs
crates/seesaw-viz/static/: index.html
crates/seesaw/src/: aggregator.rs  backend.rs  core.rs  dead_letter_queue.rs  dispatch.rs  distributed_safe.rs  edge.rs  effect_impl.rs  effect_registry.rs  engine.rs  engine_v2.rs  error.rs  event.rs  event_codec.rs  event_log.rs  event_store.rs  handler_queue.rs  handler_registry.rs  handler_runner.rs  insight.rs  job_executor.rs  lib.rs  memory_store.rs  otel.rs  process.rs  queue_backend.rs  reducer.rs  reducer_registry.rs  runtime.rs  store.rs  task_group.rs  types.rs  upcaster.rs
crates/seesaw/src/backend/: capability.rs  job_executor.rs
crates/seesaw/src/effect/: builders.rs  context.rs  error_event.rs  macros.rs  mod.rs  types.rs
crates/seesaw/src/es/: aggregate.rs  event_store.rs  has_event_store.rs  mod.rs  types.rs  upcast.rs
crates/seesaw/src/handler/: builders.rs  context.rs  error_event.rs  es_projector.rs  mod.rs  types.rs
crates/seesaw/src/reducer/: builders.rs  mod.rs  types.rs
crates/seesaw/src/runtime/: effect_worker.rs  event_worker.rs  graceful_shutdown.rs  handler_worker.rs  mod.rs
crates/seesaw/src/service/: action.rs  error.rs  into_action.rs  mod.rs
crates/seesaw/tests/: dlq_integration.rs  engine_builder.rs  engine_integration.rs  es_integration.rs  event_macro.rs  graceful_shutdown_integration.rs  macro_api.rs  stress_tests.rs
crates/seesaw/tests/compile_fail/: event_enum_no_prefix.rs  event_enum_no_prefix.stderr  event_enum_no_serde_tag.rs  event_enum_untagged.rs  event_enum_untagged.stderr  filter_extract_exclusive.rs  filter_extract_exclusive.stderr
crates/seesaw_replay/: Cargo.toml  README.md
crates/seesaw_replay/src/: lib.rs  pointer.rs  stream.rs
crates/seesaw_replay/tests/: stream_tests.rs
docs/: API_BEFORE_AFTER.md  BRAINSTORM_EVENT_SOURCING_PIVOT.md  BRAINSTORM_FIVE_GAPS.md  BRAINSTORM_RESTATE_BACKEND.md  CHANGELOG.md  CLAUDE.md  DESIGN_PRESSURE_TEST.md  DISTRIBUTED-SAFETY.md  DITCH_POSTGRES.md  EVENT_SOURCING_API.md  MIGRATION_TO_EVENT_SOURCING.md  RFC_MACRO_API.md  SIMPLIFIED_ARCHITECTURE.md  TODO.md  WORK-DEDUPLICATION.md  api-migration-guide.md  api-migration-guide.md.bak  api-reference.md  implementation-status.md  schema.sql  state-and-reducers.md  user-guide.md  user-guide.md.bak
docs/brainstorms/: 2026-02-28-backend-simplification-brainstorm.md  2026-03-01-a-plus-gaps-brainstorm.md  2026-03-01-journaled-ctx-run-brainstorm.md  2026-03-06-handler-describe-brainstorm.md  (+4 more)
examples/: EXAMPLES_PHILOSOPHY.md  README.md  SUMMARY.md
examples/ai-summarizer/: Cargo.toml
examples/ai-summarizer/src/: main.rs
examples/batch-processor/: Cargo.toml  README.md
examples/batch-processor/src/: main.rs
examples/es-order/: Cargo.toml
examples/es-order/src/: main.rs
examples/http-fetcher/: Cargo.toml
examples/http-fetcher/src/: main.rs
examples/insight-demo/: Cargo.toml
examples/insight-demo/src/: main.rs
examples/inspector-demo/: Cargo.toml
examples/inspector-demo/src/: main.rs
examples/inspector-demo/ui/: index.html  package-lock.json  package.json  vite.config.ts
examples/inspector-demo/ui/src/: App.tsx  index.css  transport.ts
examples/simple-order/: Cargo.toml
examples/simple-order/src/: main.rs
examples/workflow-status/: Cargo.toml  README.md
examples/workflow-status/src/: main.rs
migrations/: 20260206_add_dead_letter_queue.sql
modules/causal_admin/: Cargo.toml
modules/causal_admin/src/: broadcast.rs  cache.rs  display.rs  graphql.rs  lib.rs  memory.rs  postgres.rs  queries.rs  read_model.rs  types.rs
modules/causal_core_macros/: Cargo.toml
modules/causal_core_macros/src/: lib.rs
modules/causal_inspector/: Cargo.toml
modules/causal_inspector/src/: axum_router.rs  broadcast.rs  cache.rs  display.rs  graphql.rs  lib.rs  memory.rs  postgres.rs  queries.rs  read_model.rs  types.rs
modules/causal_inspector_utils/: Cargo.toml
modules/causal_inspector_utils/src/: lib.rs
modules/causal_replay/: Cargo.toml  README.md
modules/causal_replay/src/: lib.rs  pointer.rs  stream.rs
modules/causal_replay/tests/: stream_tests.rs
modules/causal_utils/: Cargo.toml
modules/causal_utils/src/: batcher.rs
(+157 files in other folders)
