[workspace]
members = [
    "crates/seesaw",
    "examples/simple-order",
    "examples/http-fetcher",
    "examples/ai-summarizer",
    "examples/workflow-status",
    "examples/insight-demo",
    "crates/seesaw-postgres",
    "crates/seesaw-insight",
    "crates/seesaw-memory",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["Crispin Read <crispin@crispinread.com>"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
erased-serde = "0.4"
futures = "0.3"
parking_lot = "0.12"
pipedream = { package = "pipedream-rs", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1.20", features = ["v4", "v5", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Dev dependencies
fastrand = "2.3"
