[workspace]
members = [
    "crates/seesaw",
    "crates/seesaw_core_macros",
    "examples/simple-order",
    "examples/http-fetcher",
    "examples/ai-summarizer",
]
resolver = "2"

[workspace.package]
version = "0.16.3"
edition = "2021"
license = "MIT"
authors = ["Crispin Read <crispin@crispinread.com>"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1.20", features = ["v4", "v5", "serde"] }

# Dev dependencies
fastrand = "2.3"
trybuild = "1.0"
