[package]
name = "seesaw-insight"
version = "0.11.0"
edition = "2021"
authors = ["Crcn <crcn@example.com>"]
description = "Real-time observability and visualization for Seesaw workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crcn/seesaw-rs"

[[bin]]
name = "seesaw-insight"
path = "src/main.rs"

[dependencies]
# Seesaw core
seesaw_core = { version = "0.11.0", path = "../seesaw" }
seesaw-postgres = { version = "0.11.0", path = "../seesaw-postgres" }

# Core
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Async
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
