[package]
name = "seesaw-kafka"
version = "0.12.0"
edition = "2021"
license = "MIT"
authors = ["Crispin Read <crispin@crispinread.com>"]
description = "Kafka backend for Seesaw event-driven orchestration"
repository = "https://github.com/crcn/seesaw-rs"
keywords = ["kafka", "event-driven", "workflow", "orchestration"]
categories = ["asynchronous", "database"]

[dependencies]
seesaw_core = { path = "../seesaw", version = "0.12.0" }
seesaw-postgres = { path = "../seesaw-postgres", version = "0.12.0" }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.23"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

[features]
default = []
integration-tests = []
