[package]
name = "seesaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-memory adapter for Seesaw event-driven runtime"

[dependencies]
# Seesaw core
seesaw_core = { version = "0.12.2", path = "../seesaw" }

# Async
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

# Collections
dashmap = "6.1"
parking_lot = "0.12"
