[package]
name = "seesaw-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PostgreSQL adapter for Seesaw event-driven runtime"

[dependencies]
# Seesaw core
seesaw_core = { version = "0.9.0", path = "../seesaw" }

# Async runtime
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Database
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tracing-subscriber = "0.3"
