[package]
name = "seesaw-viz"
version = "0.1.0"
edition = "2021"
authors = ["Seesaw Contributors"]
description = "Workflow visualization and observability for Seesaw event-driven runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seesaw-rs/seesaw"

[dependencies]
# Core async runtime
tokio = { version = "1.36", features = ["sync", "time", "rt"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization for state diffing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for event/span IDs
uuid = { version = "1.20", features = ["v4", "serde"] }

# Mermaid diagram generation
mermaid-rs = { version = "0.4", optional = true }

# Optional: Live web viewer
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
mermaid = ["mermaid-rs"]
web-viewer = ["axum", "tower", "tower-http"]
