[package]
name = "seesaw_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A deterministic, event-driven coordination layer where machines decide, effects execute, and transactions define authority"

[features]
default = ["macros"]
macros = ["dep:seesaw_core_macros"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
seesaw_core_macros = { version = "0.20.2", path = "../seesaw_core_macros", optional = true }

[dev-dependencies]
fastrand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
trybuild.workspace = true
