[package]
name = "batch-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
seesaw_core = { path = "../../crates/seesaw" }
seesaw-memory = { path = "../../crates/seesaw-memory" }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
