[package]
name = "http-fetcher-example"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
seesaw_core = { version = "0.17.0", path = "../../crates/seesaw" }
tokio = { version = "1.49", features = ["full"] }
reqwest = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
