[package]
name = "http-fetcher-example"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
causal_core = { version = "0.26.0", path = "../../modules/causal" }
tokio = { version = "1.49", features = ["full"] }
reqwest = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
