[package]
name = "insight-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
seesaw_core = { path = "../../crates/seesaw" }
seesaw-memory = { path = "../../crates/seesaw-memory" }
seesaw-insight = { path = "../../crates/seesaw-insight" }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
