[package]
name = "inspector-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
causal = { path = "../../modules/causal" }
causal_inspector = { path = "../../modules/causal_inspector", features = ["memory", "graphql"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["default"] }
tower-http = { version = "0.6", features = ["fs"] }
async-graphql = "7"
async-graphql-axum = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
