[package]
name = "simple-order-example"
version = "0.1.0"
edition = "2021"

[dependencies]
causal = { path = "../../modules/causal" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
