[package]
name = "workflow-status-example"
version = "0.1.0"
edition = "2021"

[dependencies]
seesaw_core = { path = "../../crates/seesaw" }
seesaw-postgres = { path = "../../crates/seesaw-postgres" }

anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
