[package]
name = "causal_admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Admin UI backend for causal event-driven applications"

[features]
default = []
graphql = ["async-graphql"]
cache = []
broadcast = []

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
async-graphql = { version = "7", features = ["chrono"], optional = true }
async-stream = "0.3"
futures = { workspace = true }
