[package]
name = "causal_admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Admin UI backend for causal event-driven applications"

[features]
default = []
graphql = ["async-graphql"]
postgres = ["sqlx"]
memory = ["causal"]
cache = []
broadcast = ["postgres"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"], optional = true }
causal = { version = "0.1.0", path = "../causal", default-features = false, optional = true }
async-graphql = { version = "7", features = ["chrono"], optional = true }
async-stream = "0.3"
futures = { workspace = true }
