[package]
name = "causal_core_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for causal_core"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
