[package]
name = "causal_inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Inspector backend for causal event-driven applications"

[features]
default = []
graphql = ["async-graphql"]
axum = ["dep:axum", "dep:async-graphql-axum", "graphql"]
memory = ["causal"]
cache = []

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

causal = { version = "0.1.4", path = "../causal", default-features = false, optional = true }
async-graphql = { version = "7", features = ["chrono"], optional = true }
async-graphql-axum = { version = "7", optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
async-stream = "0.3"
futures = { workspace = true }
