[package]
name = "causal_inspector_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Describe DSL and shared utilities for the causal inspector UI"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
