[package]
name = "causal_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility patterns for causal-based applications — batching, dataloader, and more"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
